# nudny-util

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/nudny/: util.hpp
include/nudny/util/: callback_queue.hpp  conversions.hpp  quasi_singleton.hpp  util.hpp
scripts/: build.sh  clean.sh  gencov.sh  rebuild.sh
src/util/: util.cpp
test/: CMakeLists.txt
test/include/: callback_queue_test.hpp  conversions_test.hpp  quasi_singleton_test.hpp
test/include/nudny/util/test/: callback_queue.hpp
test/src/: callback_queue.cpp  conversions.cpp  quasi_singleton.cpp
test/src/nudny/util/test/: callback_queue.cpp
